[gd_scene load_steps=27 format=3 uid="uid://crgu281bx4nfk"]

[ext_resource type="Script" path="res://scenes/Towers/Tesla Tower/tesla_tower.gd" id="1_3xa6a"]
[ext_resource type="Texture2D" uid="uid://b46si78toxd1u" path="res://assets/Towerpack4/Towers bases/PNGs/Tower 08.png" id="1_4y4rr"]
[ext_resource type="Texture2D" uid="uid://cmbxxl2kr0w6u" path="res://assets/Towerpack4/Towers Weapons/Tower 08/Spritesheets/Tower 08 - Level 01 - Weapon.png" id="2_6fk2n"]
[ext_resource type="Script" path="res://scenes/Towers/Tesla Tower/range.gd" id="2_54qyn"]
[ext_resource type="Texture2D" uid="uid://cifrs5eis8rxy" path="res://assets/Towerpack4/Towers Weapons/Tower 08/Spritesheets/Tower 08 - Level 01 - Projectile.png" id="5_a2hge"]

[sub_resource type="CircleShape2D" id="CircleShape2D_la7mk"]
radius = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kl6xy"]
size = Vector2(64, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjuw1"]
bg_color = Color(0, 0, 0, 0.372549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16vqs"]
bg_color = Color(0.333333, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo8le"]
atlas = ExtResource("2_6fk2n")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahxuo"]
atlas = ExtResource("2_6fk2n")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkwoh"]
atlas = ExtResource("2_6fk2n")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qybas"]
atlas = ExtResource("2_6fk2n")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrwx4"]
atlas = ExtResource("2_6fk2n")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk5tm"]
atlas = ExtResource("2_6fk2n")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc3j8"]
atlas = ExtResource("2_6fk2n")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrys0"]
atlas = ExtResource("2_6fk2n")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_015c8"]
atlas = ExtResource("2_6fk2n")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnlbf"]
atlas = ExtResource("2_6fk2n")
region = Rect2(432, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_xiisg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo8le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahxuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkwoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qybas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrwx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk5tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc3j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrys0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_015c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnlbf")
}, {
"duration": 15.0,
"texture": SubResource("AtlasTexture_vo8le")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo8le")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8ibl2"]
atlas = ExtResource("5_a2hge")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7h3d"]
atlas = ExtResource("5_a2hge")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsay6"]
atlas = ExtResource("5_a2hge")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgk84"]
atlas = ExtResource("5_a2hge")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2fil"]
atlas = ExtResource("5_a2hge")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_wovfp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ibl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7h3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsay6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgk84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2fil")
}],
"loop": false,
"name": &"Explode",
"speed": 10.0
}]

[node name="TeslaTower" type="StaticBody2D" groups=["Tower"]]
collision_layer = 3
collision_mask = 0
script = ExtResource("1_3xa6a")
health = 1500
damage = 35

[node name="Range" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 3
script = ExtResource("2_54qyn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_la7mk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kl6xy")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -34.0
offset_top = -76.0
offset_right = 306.0
offset_bottom = -49.0
scale = Vector2(0.2, 0.2)
theme_override_constants/outline_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_rjuw1")
theme_override_styles/fill = SubResource("StyleBoxFlat_16vqs")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("1_4y4rr")
region_enabled = true
region_rect = Rect2(0, 64, 64, 128)

[node name="Weapon" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -44)
sprite_frames = SubResource("SpriteFrames_xiisg")
animation = &"Attack"
frame_progress = 0.126167

[node name="Blast" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -42)
sprite_frames = SubResource("SpriteFrames_wovfp")
animation = &"Explode"
frame = 4
frame_progress = 1.0

[connection signal="add_target" from="." to="." method="_on_add_target"]
[connection signal="remove_target" from="." to="." method="_on_remove_target"]
[connection signal="take_damage" from="." to="." method="_on_take_damage"]
[connection signal="body_entered" from="Range" to="Range" method="_on_body_entered"]
[connection signal="body_exited" from="Range" to="Range" method="_on_body_exited"]
[connection signal="frame_changed" from="Weapon" to="." method="_on_weapon_frame_changed"]
